Fix z-index for styling purpose

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,16 +150,17 @@ header {
     top: 0;
     width: 100%;
     height: 100%;
-   /* z-index: 99; */
+    z-index: 99;
     background-color: rgba(46, 61, 73, 0.5);
 }
+/*
 .instructions-outer {
     z-index: 9;
 }
 
 .modal-outer{
     z-index: 99;
-}
+} */
 
 .instructions-inner,
 .modal-inner {
